# Text_to_Python

./: .gitignore  Dockerfile  LICENSE  ModelTrain.ipynb  README.md  colab_train.ipynb  pyproject.toml  report_template.md  requirements.txt  run_all.py  run_docker.ps1
Final_submission/: Dockerfile  README.md  Text_to_Python.ipynb  main.py  requirements.txt  run.bat  run.sh
Final_submission/Attention_Visualizations/: attention_analysis.ipynb
Final_submission/Evaluation/: model_comparison.ipynb
Final_submission/Notebook/: 01_Vanilla_RNN_Seq2Seq.ipynb  02_LSTM_Seq2Seq.ipynb  03_LSTM_with_Attention.ipynb
Final_submission/src/: __init__.py  config.py  data.py  eval_utils.py  models.py  train_utils.py
notebooks/: colab_train.ipynb
src/: README.md
src/text2python/: __init__.py  attention.py  config.py  data.py  eval.py  metrics.py  models.py  train.py  vocab.py
